--- a/app/src/main/res/layout/bottom_sheet_remove_image.xml
+++ b/app/src/main/res/layout/bottom_sheet_remove_image.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_cross"
@@ -35,9 +35,10 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/delete"
+                android:src="@drawable/ic_delete_grey"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/primary" />
 
             <TextView
                 android:id="@+id/tv_label_remove_photo"
