--- a/app/src/main/res/layout/include_constraint_general_expense.xml
+++ b/app/src/main/res/layout/include_constraint_general_expense.xml
@@ -5,16 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_constraint_general_expense">
+
     <TextView
         android:id="@+id/tv_lbl_general_expense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="အထွေထွေစားရိတ်"
         android:textColor="@color/textColor"
         android:textSize="19sp"
         android:textStyle="bold"
+
+        app:layout_constraintBottom_toTopOf="@+id/divider_view1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,13 +31,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_lbl_general_expense"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
-
+    <View
+        android:id="@+id/divider_view1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toTopOf="@id/barrier_general_expense"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+<androidx.constraintlayout.widget.Barrier
+    android:id="@+id/barrier_general_expense"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:barrierDirection="bottom"
+    app:constraint_referenced_ids="tv_lbl_general_expense,switch_general_expense"/>
    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
-        android:visibility="gone"
+       android:layout_marginTop="16dp"
+       android:visibility="gone"
        android:id="@+id/expanded_general_expense"
        layout="@layout/include_general_expense_expanded_state"
-       app:layout_constraintTop_toBottomOf="@id/tv_lbl_general_expense"
+       app:layout_constraintTop_toBottomOf="@id/barrier_general_expense"
 />
 </androidx.constraintlayout.widget.ConstraintLayout>
