--- a/app/src/main/res/layout/include_general_expense_expanded_state.xml
+++ b/app/src/main/res/layout/include_general_expense_expanded_state.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <View
         android:id="@+id/view5"
@@ -122,21 +122,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@android:color/transparent"
+        app:backgroundTint="@color/white"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
         android:insetBottom="0dp"
         android:padding="0dp"
         android:text="Edit"
-        android:textAlignment="textEnd"
         android:textColor="@color/primary"
         android:textStyle="bold"
         app:icon="@drawable/ic_edit"
         app:iconGravity="textStart"
-        app:iconPadding="-24dp"
         app:iconSize="24dp"
         app:iconTint="@color/primary"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_lbl_gem_and_dia_price"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_lbl_gem_and_dia_price" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_cancel_gem_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        app:backgroundTint="@color/white"
+        app:elevation="0dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:padding="0dp"
+        android:visibility="gone"
+        android:text="Cancel"
+        android:textAlignment="center"
+        android:textColor="@color/primary"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tv_lbl_gem_and_dia_price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_lbl_gem_and_dia_price" />
@@ -153,8 +172,9 @@
         app:layout_constraintStart_toStartOf="@+id/tv_lbl_gem_and_dia_price"
         app:layout_constraintTop_toBottomOf="@+id/tv_lbl_gem_and_dia_price" />
 
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_label_reduced_percent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -166,6 +186,148 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_gem_and_dia_price"
         app:layout_constraintStart_toEndOf="@+id/tv_gem_and_dia_price"
         app:layout_constraintTop_toTopOf="@+id/tv_gem_and_dia_price" />
+    <CheckBox
+        android:id="@+id/check_percentage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Percentage (%) လျှော့ပေးမည်"
+        android:textColor="@color/secondaryTextColor"
+        android:textSize="13sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/tv_gem_and_dia_price"
+        app:layout_constraintTop_toBottomOf="@+id/tv_gem_and_dia_price"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_gem_value"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toStartOf="@+id/til_gem_value_percentage_reduce"
+        app:layout_constraintStart_toStartOf="@+id/tv_gem_and_dia_price"
+        app:layout_constraintTop_toBottomOf="@+id/check_percentage">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_gem_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textColor="@color/inputTextColor"
+            android:textColorHint="@color/hintTextColor" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_gem_value_percentage_reduce"
+        android:layout_width="118dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="24dp"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        app:layout_constraintTop_toTopOf="@+id/til_gem_value">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_percentage_dis_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/percent"
+            android:inputType="number"
+            android:textColor="@color/inputTextColor"
+            android:textColorHint="@color/hintTextColor" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_calculate"
+        android:layout_width="124dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#F9E9EA"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:text="Calculate"
+        android:textColor="@color/primary"
+        app:cornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="@+id/til_gem_value"
+        app:layout_constraintTop_toBottomOf="@+id/til_gem_value" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_reduced_percentage_gem_value"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/btn_calculate"
+        app:layout_constraintTop_toBottomOf="@+id/btn_calculate">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_calculate_percentage_dis_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textColor="@color/inputTextColor"
+            android:textColorHint="@color/hintTextColor" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_lbl_dis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="၁၀% လျှော့ပြီးငွေ"
+        android:textColor="#66985E"
+        android:textSize="11sp"
+        app:layout_constraintStart_toStartOf="@+id/til_reduced_percentage_gem_value"
+        app:layout_constraintTop_toBottomOf="@+id/til_reduced_percentage_gem_value" />
+
+
+    <TextView
+        android:id="@+id/tv_lbl_learn_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/lbl_learn_more"
+        android:textColor="#66985E"
+        android:textSize="11sp"
+        app:layout_constraintStart_toEndOf="@+id/tv_lbl_dis"
+        app:layout_constraintTop_toTopOf="@+id/tv_lbl_dis" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_save_gem_value"
+        android:layout_width="124dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:text="Save"
+        app:cornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="@+id/til_gem_value"
+        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_dis" />
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_gem_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="check_percentage,til_gem_value,til_gem_value_percentage_reduce,btn_calculate,til_reduced_percentage_gem_value,tv_lbl_dis,tv_lbl_learn_more,btn_save_gem_value"
+        app:barrierDirection="bottom"/>
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/gem_value_edit_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="check_percentage,til_gem_value,til_gem_value_percentage_reduce,btn_calculate,til_reduced_percentage_gem_value,tv_lbl_dis,tv_lbl_learn_more,btn_save_gem_value"
+        app:barrierDirection="bottom"/>
 
     <View
         android:id="@+id/view6"
@@ -178,7 +340,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_gem_and_dia_price" />
+        app:layout_constraintTop_toBottomOf="@+id/barrier_gem_value" />
 
     <TextView
         android:id="@+id/tv_lbl_fee"
