--- a/app/src/main/res/layout/include_gold_and_gem_weight_gm1.xml
+++ b/app/src/main/res/layout/include_gold_and_gem_weight_gm1.xml
@@ -58,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
+        app:elevation="0dp"
         app:backgroundTint="@color/white"
         android:insetLeft="0dp"
         android:insetTop="0dp"
@@ -81,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         app:backgroundTint="@color/white"
+        app:elevation="0dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -110,7 +112,7 @@
             android:id="@+id/edt_gold_and_gem_weight_gm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:textColor="@color/inputTextColor"
             android:textColorHint="@color/hintTextColor" />
 
