--- a/app/src/main/res/layout/include_old_stock_add_item_photo.xml
+++ b/app/src/main/res/layout/include_old_stock_add_item_photo.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:fillViewport="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -267,18 +267,21 @@
     android:layout_height="wrap_content"
     app:constraint_referenced_ids="til_weight_gm,til_weight_kyat"
     app:barrierDirection="bottom"/>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_add"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
             android:text="Add"
             android:textAlignment="center"
             android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/radio_gp_calculation"
             app:layout_constraintStart_toStartOf="@id/radio_gp_calculation"
             app:layout_constraintTop_toBottomOf="@id/barrier" />
